[package]
name = "timestamp-microservice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2"
chrono = "0.4"
hyper = "0.14.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tracing-subscriber = "0.2.20"
tracing = "0.1"
